--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": "https://ajmurray211.github.io/Blush-Rover-frontend",
+  "homepage": "https://ajmurray211.github.io/Blush-Rover-frontend/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
